feat: Add VNC support and optimize query performance
- Add VNC server (x11vnc) and virtual display (Xvfb) for headless debugging
- Create entrypoint.sh to orchestrate Xvfb, Fluxbox, and VNC startup
- Expose port 5900 for VNC connections (localhost:5900)
- Optimize query execution by removing slow networkidle waits
- Implement smart answer detection using 'Stop generating' button
- Add fallback text stability check for answer completion
- Update .dockerignore to exclude browser data directories
- Set DEBIAN_FRONTEND=noninteractive to prevent timezone prompts

This enables true automation that can run in background while still
being observable via VNC when needed for debugging.

--- a/agents/perplexity-researcher/Dockerfile
+++ b/agents/perplexity-researcher/Dockerfile
@@ -6,6 +6,15 @@ COPY package.json package-lock.json* ./
 
 RUN npm install
 
+# Install VNC and Window Manager
+ENV DEBIAN_FRONTEND=noninteractive
+ENV TZ=UTC
+RUN apt-get update && apt-get install -y \
+    xvfb \
+    x11vnc \
+    fluxbox \
+    && rm -rf /var/lib/apt/lists/*
+
 COPY . .
 
 # Default command (can be overridden)
