feat: add script to install custom Vial GUI and update gitignore to exclude researcher agent results.

--- a/.gitignore
+++ b/.gitignore
@@ -3830,3 +3830,15 @@ agents/perplexity-researcher/node_modules/yn/package.json
 agents/perplexity-researcher/node_modules/yn/readme.md
 agents/perplexity-researcher/data/queries.json
 agents/perplexity-researcher/playwright/.auth/user.json
+agents/perplexity-researcher/data/results/error-1764021590255.png
+agents/perplexity-researcher/data/results/error-1764021623301.png
+agents/perplexity-researcher/data/results/error-1764021623366.html
+agents/perplexity-researcher/data/results/error-1764021713428.png
+agents/perplexity-researcher/data/results/error-1764021713526.html
+agents/perplexity-researcher/data/results/result-1763974375615.json
+agents/perplexity-researcher/data/results/result-1764021791517.json
+agents/perplexity-researcher/data/results/result-1764022456894.json
+agents/perplexity-researcher/data/results/result-1764024496210.json
+agents/perplexity-researcher/data/results/result-1764027569033.json
+agents/perplexity-researcher/data/results/result-1764027604659.json
+agents/perplexity-researcher/data/results/result-1764027791657.json
