--- a/agents/perplexity-researcher/docker-compose.yml
+++ b/agents/perplexity-researcher/docker-compose.yml
@@ -1,22 +1,28 @@
 version: '3.8'
 
 services:
-  app:
+  perplexity-server:
     build: .
-    image: perplexity-researcher
-    working_dir: /app
-    volumes:
-      - .:/app
-      - /app/node_modules
-      - ./entrypoint.sh:/entrypoint.sh
+    image: perplexity-researcher:latest
+    container_name: perplexity-server
     ports:
-      - "5900:5900"
-    entrypoint: ["/entrypoint.sh"]
+      - "3000:3000" # HTTP API
+      - "5900:5900" # VNC (for debugging headed mode)
+    volumes:
+      # Persist browser profile (authentication state)
+      - browser-data:/root/.cache/perplexity-browser
+      # Persist query results
+      - ./data:/app/data
     environment:
       - DISPLAY=:99
-      # Playwright specific
-      - DEBUG=pw:api
-    # IPC host needed for some X11 setups
+      - PORT=3000
+      # Set to "true" for headless mode (no VNC needed)
+      - HEADLESS=false
+    entrypoint: [ "/entrypoint.sh" ]
+    restart: unless-stopped
     ipc: host
-    # User mapping to avoid permission issues on Linux
-    user: "${UID:-1000}:${GID:-1000}"
+
+volumes:
+  browser-data:
+
+
