--- a/agents/perplexity-researcher/package.json
+++ b/agents/perplexity-researcher/package.json
@@ -5,19 +5,23 @@
   "main": "src/index.ts",
   "scripts": {
     "auth": "ts-node src/index.ts auth",
+    "serve": "ts-node src/index.ts serve",
     "query": "ts-node src/index.ts query",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "playwright": "^1.40.0",
     "playwright-extra": "^4.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "puppeteer-core": "^21.5.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
