--- a/agents/perplexity-researcher/package.json
+++ b/agents/perplexity-researcher/package.json
@@ -1,13 +1,15 @@
 {
   "name": "perplexity-researcher",
-  "version": "1.0.0",
+  "version": "1.0.18",
   "description": "Perplexity.ai automation for academic research",
   "main": "src/index.ts",
   "scripts": {
     "auth": "ts-node src/index.ts auth",
+    "login": "ts-node src/index.ts login",
     "serve": "ts-node src/index.ts serve",
     "query": "ts-node src/index.ts query",
-    "build": "tsc",
+    "batch": "ts-node src/index.ts batch",
+    "build": "tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,7 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "playwright": "^1.40.0",
+    "playwright": "1.57.0",
     "playwright-extra": "^4.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "puppeteer-core": "^21.5.0"
