--- a/agents/perplexity-researcher/package.json
+++ b/agents/perplexity-researcher/package.json
@@ -1,12 +1,15 @@
 {
   "name": "perplexity-researcher",
-  "version": "1.0.18",
-  "description": "Perplexity.ai automation for academic research",
+  "version": "1.0.23",
+  "description": "Automated researcher agent using Perplexity AI",
   "main": "src/index.ts",
   "scripts": {
     "auth": "ts-node src/index.ts auth",
-    "login": "ts-node src/index.ts login",
-    "serve": "ts-node src/index.ts serve",
+    "login": "HEADLESS=false ts-node src/index.ts login",
+    "start": "node dist/index.js",
+    "serve": "ts-node src/server.ts",
+    "notebook": "ts-node src/index.ts notebook",
+    "debug:notebook": "ts-node src/debug-notebooklm.ts",
     "query": "ts-node src/index.ts query",
     "batch": "ts-node src/index.ts batch",
     "build": "tsc -p tsconfig.json",
