--- a/agents/perplexity-researcher/package.json
+++ b/agents/perplexity-researcher/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "perplexity-researcher",
+  "name": "rsrch",
   "version": "1.0.23",
-  "description": "Automated researcher agent using Perplexity AI",
+  "description": "Automated researcher agent using Perplexity AI and Gemini",
   "main": "src/index.ts",
   "scripts": {
+    "rsrch": "ts-node src/index.ts",
     "auth": "ts-node src/index.ts auth",
     "login": "HEADLESS=false ts-node src/index.ts login",
     "start": "node dist/index.js",
     "serve": "ts-node src/server.ts",
-    "notebook": "ts-node src/index.ts notebook",
     "debug:notebook": "ts-node src/debug-notebooklm.ts",
-    "query": "ts-node src/index.ts query",
-    "batch": "ts-node src/index.ts batch",
     "build": "tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
