feat: Add DEB package installation for rsrch CLI
- Created install.rsrch.sh with dynamic version extraction
- Created rsrch-wrapper.sh with Gemini support
- Added shebang and bin entry to package.json
- Improved Gemini client error handling

--- a/agents/perplexity-researcher/package.json
+++ b/agents/perplexity-researcher/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.23",
   "description": "Automated researcher agent using Perplexity AI and Gemini",
   "main": "src/index.ts",
+  "bin": {
+    "rsrch": "dist/index.js"
+  },
   "scripts": {
     "rsrch": "ts-node src/index.ts",
     "auth": "ts-node src/index.ts auth",
