fix: Update docker-compose to use rsrch config directory
- Change volume mount from ~/.config/perplexity-researcher to ~/.config/rsrch
- Ensures auth.json and user-data are properly mounted in container
- Aligns with CLI refactoring to 'rsrch'

--- a/agents/perplexity-researcher/docker-compose.yml
+++ b/agents/perplexity-researcher/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     volumes:
       - ./data:/app/data
       - ./src:/app/src
-      - ${HOME}/.config/perplexity-researcher:/app/config
+      - ${HOME}/.config/rsrch:/app/config
     environment:
       - PORT=${PORT:-3001}
       - BROWSER_WS_ENDPOINT=ws://chromium:3000/ws
