--- a/infrastructure/ansible/inventory.yml
+++ b/infrastructure/ansible/inventory.yml
@@ -2,8 +2,8 @@
 servers:
   hosts:
     halvarm:
-      ansible_host: <halvarm_ip>
-      ansible_user: opc
+      ansible_user: ubuntu
+      # ansible_host is inherited from ~/.ssh/config alias 'halvarm'
 
 # For running ansible from 'halvarm' itself
 local:
