feat: add FalkorDB integration for graph-based job queue and knowledge base
- Add FalkorDB service to docker-compose.yml (port 6379)
- Install falkordb npm package
- Create src/graph-store.ts with:
  - Job queue operations (add/get/list/update jobs)
  - Knowledge base (entities, relationships)
  - Agent memory (facts per agent)
- Use proper FalkorDB query API with string escaping

--- a/agents/rsrch/docker-compose.yml
+++ b/agents/rsrch/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "5900:5900"
       - "3002:3000"
-      - "9223:9223"  # CDP port (socat proxy)
+      - "9223:9223" # CDP port (socat proxy)
     ipc: host
     volumes:
       - ${HOME}/.config/rsrch/user-data:/app/user-data
@@ -34,4 +34,11 @@ services:
       - chromium
     restart: unless-stopped
 
-
+  falkordb:
+    image: falkordb/falkordb:latest
+    container_name: falkordb
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./data/falkordb:/data
+    restart: unless-stopped
