--- a/agents/rsrch/package.json
+++ b/agents/rsrch/package.json
@@ -21,10 +21,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "falkordb": "^6.4.0",
     "playwright": "1.57.0",
     "playwright-extra": "^4.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "puppeteer-core": "^21.5.0"
+    "puppeteer-core": "^21.5.0",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
