--- a/infrastruct/nomad_stack/roles/common/tasks/main.yml
+++ b/infrastruct/nomad_stack/roles/common/tasks/main.yml
@@ -44,10 +44,11 @@
   ansible.builtin.stat:
     path: /swapfile
   register: swap_file
+  when: inventory_hostname != 'localhost'
 
 - name: Create swap file (4GB)
   ansible.builtin.command: fallocate -l 4G /swapfile
-  when: not swap_file.stat.exists
+  when: inventory_hostname != 'localhost' and not swap_file.stat.exists
 
 - name: Set swap file permissions
   ansible.builtin.file:
@@ -55,32 +56,36 @@
     owner: root
     group: root
     mode: '0600'
+  when: inventory_hostname != 'localhost'
 
 - name: Format swap file
   ansible.builtin.command: mkswap /swapfile
-  when: not swap_file.stat.exists
+  when: inventory_hostname != 'localhost' and not swap_file.stat.exists
 
 - name: Enable swap
   ansible.builtin.command: swapon /swapfile
-  when: not swap_file.stat.exists
+  when: inventory_hostname != 'localhost' and not swap_file.stat.exists
 
 - name: Persist swap in fstab
   ansible.builtin.lineinfile:
     path: /etc/fstab
     line: '/swapfile none swap sw 0 0'
     state: present
+  when: inventory_hostname != 'localhost'
 
 - name: Set swappiness to 10 (prefer RAM, but use swap when needed)
   ansible.posix.sysctl:
     name: vm.swappiness
     value: '10'
     state: present
+  when: inventory_hostname != 'localhost'
 
 - name: Set vfs_cache_pressure to 50
   ansible.posix.sysctl:
     name: vm.vfs_cache_pressure
     value: '50'
     state: present
+  when: inventory_hostname != 'localhost'
 
 # --- Firewall ---
 
@@ -89,20 +94,24 @@
     state: enabled
     policy: deny
     direction: incoming
+  when: inventory_hostname != 'localhost'
 
 - name: Allow SSH
   community.general.ufw:
     rule: allow
     name: OpenSSH
+  when: inventory_hostname != 'localhost'
 
 - name: Allow HTTP
   community.general.ufw:
     rule: allow
     port: '80'
     proto: tcp
+  when: inventory_hostname != 'localhost'
 
 - name: Allow HTTPS
   community.general.ufw:
     rule: allow
     port: '443'
     proto: tcp
+  when: inventory_hostname != 'localhost'
