fix(ansible): resolve playbook hang issues and add preflight checks
- Issue 1: Replace Tailscale pause with fail task (no more indefinite hang)
- Issue 2: Use explicit 'servers:local' hosts pattern instead of 'all'
- Issue 3: Add stat check before reading vault_keys.json, use slurp module
- Issue 4: Add comments documenting job constraint behavior
- Issue 5: Make Docker group user dynamic via ansible_user variable
- Add preflight role with comprehensive pre-deployment checks:
  - Tailscale authentication status
  - Vault keys file existence
  - SSH connectivity
  - Disk space and memory warnings
  - WAN peer connectivity for federation

--- a/infrastruct/nomad_stack/playbook.yml
+++ b/infrastruct/nomad_stack/playbook.yml
@@ -1,6 +1,15 @@
 ---
-- name: Deploy Self-Hosted Stack
-  hosts: all
+# Pre-flight checks run first on all targets
+- name: Pre-flight Checks
+  hosts: servers:local
+  gather_facts: true
+  become: false
+  roles:
+    - role: preflight
+
+# Infrastructure deployment on both cloud (servers) and local (ntb)
+- name: Deploy Infrastructure
+  hosts: servers:local
   become: true
   vars:
     ansible_python_interpreter: /usr/bin/python3
@@ -9,4 +18,12 @@
     - role: tailscale
     - role: docker
     - role: hashicorp
+
+# Jobs only deploy on cloud servers (constraint: node_class=cloud)
+- name: Deploy Jobs (Server Only)
+  hosts: servers
+  become: true
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
+  roles:
     - role: nomad_jobs
