--- a/infrastruct/nomad_stack/roles/docker/tasks/main.yml
+++ b/infrastruct/nomad_stack/roles/docker/tasks/main.yml
@@ -34,7 +34,7 @@
   ansible.builtin.file:
     path: /etc/apt/keyrings
     state: directory
-    mode: '0755'
+    mode: "0755"
 
 - name: Add Docker's official GPG key
   become: true
@@ -75,12 +75,11 @@
     state: started
     enabled: true
 
-- name: Add the ubuntu user to the docker group
+- name: Add the current user to the docker group
   become: true
   ansible.builtin.user:
-    name: ubuntu
+    name: "{{ ansible_user | default(ansible_env.SUDO_USER) | default('ubuntu') }}"
     groups: docker
     append: true
-
 # Note: We don't need to manually install docker-compose binary anymore
 # because docker-compose-plugin provides 'docker compose' command.
