--- a/infrastruct/nomad_stack/roles/hashicorp/tasks/main.yml
+++ b/infrastruct/nomad_stack/roles/hashicorp/tasks/main.yml
@@ -20,13 +20,45 @@
     state: present
     update_cache: yes
 
+- name: Create CNI Plugin Directory
+  ansible.builtin.file:
+    path: /opt/cni/bin
+    state: directory
+    mode: "0755"
+
+- name: Install CNI Plugins
+  ansible.builtin.unarchive:
+    src: "https://github.com/containernetworking/plugins/releases/download/v1.3.0/cni-plugins-linux-{{ 'arm64' if ansible_architecture == 'aarch64' else 'amd64' }}-v1.3.0.tgz"
+    dest: /opt/cni/bin
+    remote_src: yes
+    creates: /opt/cni/bin/bridge
+
+- name: Load br_netfilter module
+  community.general.modprobe:
+    name: br_netfilter
+    state: present
+
+- name: Ensure br_netfilter is loaded on boot
+  ansible.builtin.copy:
+    content: "br_netfilter"
+    dest: /etc/modules-load.d/br_netfilter.conf
+    mode: "0644"
+
+- name: Configure Bridge Network Traffic
+  ansible.posix.sysctl:
+    name: net.bridge.bridge-nf-call-iptables
+    value: "1"
+    state: present
+    sysctl_file: /etc/sysctl.d/bridge.conf
+    reload: yes
+
 - name: Create Consul data directory
   ansible.builtin.file:
     path: /opt/consul
     state: directory
     owner: consul
     group: consul
-    mode: '0755'
+    mode: "0755"
 
 - name: Create Vault data directory
   ansible.builtin.file:
@@ -34,7 +66,7 @@
     state: directory
     owner: vault
     group: vault
-    mode: '0755'
+    mode: "0755"
 
 - name: Create Nomad data directory
   ansible.builtin.file:
@@ -42,7 +74,7 @@
     state: directory
     owner: root
     group: root
-    mode: '0755'
+    mode: "0755"
 
 - name: Get Tailscale IP
   ansible.builtin.command: tailscale ip -4
@@ -135,6 +167,9 @@
       plugin "docker" {
         config {
           allow_privileged = true
+          volumes {
+            enabled = true
+          }
         }
       }
 
@@ -154,30 +189,41 @@
       }
   notify: Restart Nomad
 
-- name: Enable and start services
+- name: Start Consul
   ansible.builtin.systemd:
-    name: "{{ item }}"
+    name: consul
     enabled: yes
     state: started
-  loop:
-    - consul
-    - vault
-    - nomad
 
-- name: Wait for Consul to start
+- name: Wait for Consul (Timeout 30s)
   ansible.builtin.wait_for:
     port: 8500
-    delay: 5
+    delay: 2
+    timeout: 30
 
-- name: Wait for Vault to start
+- name: Start Vault
+  ansible.builtin.systemd:
+    name: vault
+    enabled: yes
+    state: started
+
+- name: Wait for Vault (Timeout 30s)
   ansible.builtin.wait_for:
     port: 8200
-    delay: 5
+    delay: 2
+    timeout: 30
 
-- name: Wait for Nomad to start
+- name: Start Nomad
+  ansible.builtin.systemd:
+    name: nomad
+    enabled: yes
+    state: started
+
+- name: Wait for Nomad (Timeout 30s)
   ansible.builtin.wait_for:
     port: 4646
-    delay: 5
+    delay: 2
+    timeout: 30
 
 # --- Automated Vault Initialization & Unseal ---
 
@@ -201,7 +247,7 @@
       ansible.builtin.copy:
         content: "{{ vault_init_output.stdout }}"
         dest: "./vault_keys.json"
-        mode: '0600'
+        mode: "0600"
       delegate_to: localhost
       become: false
 
@@ -222,16 +268,30 @@
 
 - name: Read Vault keys from local file (if existing)
   block:
+    - name: Check if vault_keys.json exists locally
+      ansible.builtin.stat:
+        path: "{{ playbook_dir }}/vault_keys.json"
+      delegate_to: localhost
+      become: false
+      register: vault_keys_stat
+
     - name: Read keys file
-      ansible.builtin.command: cat ./vault_keys.json
+      ansible.builtin.slurp:
+        src: "{{ playbook_dir }}/vault_keys.json"
       delegate_to: localhost
       become: false
       register: vault_keys_file
-      changed_when: false
+      when: vault_keys_stat.stat.exists
 
     - name: Set facts for unsealing (from file)
       ansible.builtin.set_fact:
-        vault_unseal_key: "{{ (vault_keys_file.stdout | from_json).unseal_keys_b64[0] }}"
+        vault_unseal_key: "{{ (vault_keys_file.content | b64decode | from_json).unseal_keys_b64[0] }}"
+      when: vault_keys_stat.stat.exists
+
+    - name: Warn if vault_keys.json not found
+      ansible.builtin.debug:
+        msg: "WARNING: vault_keys.json not found at {{ playbook_dir }}/vault_keys.json - Vault cannot be auto-unsealed"
+      when: not vault_keys_stat.stat.exists
 
   when:
     - vault_init_status.rc == 0
