--- a/agents/questDiscov/pyproject.toml
+++ b/agents/questDiscov/pyproject.toml
@@ -3,7 +3,7 @@ name = "questDiscov"
 version = "0.1.0"
 description = "Research question prioritization agent using LangGraph"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 
 dependencies = [
     "langgraph>=0.2.0",
@@ -32,12 +32,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
-sources = ["src"]
-
-[tool.hatch.build.targets.wheel.sources]
-"src" = "questDiscov"
+packages = ["questDiscov"]
 
 [tool.ruff]
 line-length = 100
-target-version = "py311"
+target-version = "py310"
