--- a/integrations/mapObsi/scripts_julia/Project.toml
+++ b/integrations/mapObsi/scripts_julia/Project.toml
@@ -1,2 +1,4 @@
 [deps]
+FLoops = "cc61a311-1640-44b5-9fba-1b764f453329"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+TreeSitter = "f42328cb-ece0-4cf2-995f-9e7abb27d006"
