feat(ansible): add optional swiprolog role
- Add roles/swiprolog with apt PPA installation
- Install janus-swi Python package
- Controllable via swiprolog_enabled variable (default: true)
- Add to setup_local.yml playbook

--- a/infrastruct/ansible/setup_local.yml
+++ b/infrastruct/ansible/setup_local.yml
@@ -4,3 +4,6 @@
   become: false
   roles:
     - role: julia
+    - role: swiprolog
+      # vars:
+      #   swiprolog_enabled: false  # Uncomment to skip SWI-Prolog installation
