feat(librarian): implement project mapping and analyze command
- Refactor Config to support Sources and ProjectRoots
- Update Watcher to detect Projects and create :Project nodes
- Add :Project index and :CONTAINS relationships to DB client
- Implement 'analyze' command to trigger Windmill webhook
- Update documentation and task list

--- a/integrations/mapObsi/implementations/go/config.example.yaml
+++ b/integrations/mapObsi/implementations/go/config.example.yaml
@@ -109,6 +109,22 @@ watcher:
   rescan_interval: 0
 
 # =============================================================================
+# PROJECTS - Project detection settings
+# =============================================================================
+project_roots:
+  - "Prods"
+  - "Archived"
+
+# =============================================================================
+# AI ANALYSIS - Windmill Integration
+# =============================================================================
+windmill:
+  webhook_url: "" # e.g. https://windmill.io/w/workspace/job/run/path
+  token: ""
+
+# =============================================================================
+
+# =============================================================================
 # QUICK SCAN PROFILES - For running specific scans
 # =============================================================================
 profiles:
