feat(ansible): add obs-studio role and install on local ntb

--- a/infrastruct/ansible/setup_local.yml
+++ b/infrastruct/ansible/setup_local.yml
@@ -5,5 +5,6 @@
   roles:
     - role: julia
     - role: swiprolog
+    - role: obs-studio
       # vars:
       #   swiprolog_enabled: false  # Uncomment to skip SWI-Prolog installation
